--- a/EduhomeMVC/EduhomeMVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/EduhomeMVC/EduhomeMVC/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -24,8 +24,8 @@
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
       <div class="navbar-brand-wrapper d-flex justify-content-center">
         <div class="navbar-brand-inner-wrapper d-flex justify-content-between align-items-center w-100">  
-          <a class="navbar-brand brand-logo" href="index.html"><img src="~/admin/assets/images/logo.svg" alt="logo"/></a>
-          <a class="navbar-brand brand-logo-mini" href="index.html"><img src="~/admin/assets/images/logo-mini.svg" alt="logo"/></a>
+          <a class="navbar-brand brand-logo" asp-area="admin" asp-controller="dashboard" asp-action="index"><img src="~/admin/assets/images/logo.svg" alt="logo"/></a>
+          <a class="navbar-brand brand-logo-mini" asp-area="admin" asp-controller="dashboard" asp-action="index"><img src="~/admin/assets/images/logo-mini.svg" alt="logo"/></a>
           <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
             <span class="mdi mdi-sort-variant"></span>
           </button>
@@ -166,7 +166,7 @@
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
         <ul class="nav">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">
+            <a class="nav-link" asp-area="admin" asp-controller="dashboard" asp-action="index">
               <i class="mdi mdi-home menu-icon"></i>
               <span class="menu-title">Dashboard</span>
             </a>
@@ -185,9 +185,9 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="pages/forms/basic_elements.html">
+            <a class="nav-link" asp-area="admin" asp-controller="slider" asp-action="index">
               <i class="mdi mdi-view-headline menu-icon"></i>
-              <span class="menu-title">Form elements</span>
+              <span class="menu-title">Sliders</span>
             </a>
           </li>
           <li class="nav-item">
