--- a/EduhomeMVC/EduhomeMVC/Views/Shared/_Layout.cshtml
+++ b/EduhomeMVC/EduhomeMVC/Views/Shared/_Layout.cshtml
@@ -215,5 +215,9 @@
     <script src="~/assets/js/jquery.nicescroll.min.js"></script>
     <script src="~/assets/js/plugins.js"></script>
     <script src="~/assets/js/main.js"></script>
+    
+        @{
+            await Html.RenderPartialAsync("_ValidationScriptsPartial");
+        }
 </body>
 </html>
